--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-financial": "^0.2.1",
     "chartjs-plugin-annotation": "^2.0.1",
-    "chartjs-plugin-datalabels": "2.2.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "crypto-browserify": "3.12.1",
     "crypto-js": "4.2.0",
