--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "baseUrl": "./",
+  "ignoreDeprecations": "5.0",
     "types": [
       "node"
     ]
