--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "dependencies": {
     "@angular/animations": "20.2.0",
     "@angular/cdk": "20.2.0",
-    "@angular/common": "^20.2.0",
+    "@angular/common": "20.2.0",
     "@angular/compiler": "20.2.0",
-    "@angular/core": "^20.2.0",
-    "@angular/forms": "^20.2.0",
-    "@angular/material": "^20.2.0",
+    "@angular/core": "20.2.0",
+    "@angular/forms": "20.2.0",
+    "@angular/material": "20.2.0",
     "@angular/material-moment-adapter": "20.2.0",
     "@angular/platform-browser": "20.2.0",
     "@angular/platform-browser-dynamic": "20.2.0",
@@ -46,56 +46,56 @@
     "@ngx-translate/core": "17.0.0",
     "@ngx-translate/http-loader": "17.0.0",
     "buffer": "6.0.3",
-    "chart.js": "^4.5.0",
-    "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-chart-financial": "^0.2.1",
-    "chartjs-plugin-annotation": "^2.0.1",
-    "chartjs-plugin-datalabels": "^2.2.0",
-    "chartjs-plugin-zoom": "^2.2.0",
+    "chart.js": "4.5.0",
+    "chartjs-adapter-date-fns": "3.0.0",
+    "chartjs-chart-financial": "0.2.1",
+    "chartjs-plugin-annotation": "2.0.1",
+    "chartjs-plugin-datalabels": "2.2.0",
+    "chartjs-plugin-zoom": "2.2.0",
     "crypto-browserify": "3.12.1",
     "crypto-js": "4.2.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "4.1.0",
     "hammerjs": "2.0.8",
-    "install": "^0.13.0",
+    "install": "0.13.0",
     "jwt-decode": "4.0.0",
     "moment": "2.30.1",
-    "ng2-charts": "^5.0.3",
+    "ng2-charts": "5.0.3",
     "ngrx-store-localstorage": "20.0.0",
-    "npm": "^11.5.2",
+    "npm": "11.5.2",
     "qrcode": "1.5.4",
-    "rxjs": "^7.8.2",
+    "rxjs": "7.8.2",
     "stream-browserify": "3.0.0",
-    "tslib": "^2.8.1",
+    "tslib": "2.8.1",
     "uuid": "11.1.0",
     "zone.js": "0.15.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "20.0.0",
-    "@angular-devkit/build-angular": "20.2.0",
-    "@angular-eslint/eslint-plugin": "20.1.1",
-    "@angular-eslint/eslint-plugin-template": "20.1.1",
-    "@angular-eslint/schematics": "20.1.1",
-    "@angular-eslint/template-parser": "20.1.1",
-    "@angular/build": "20.2.0",
-    "@angular/cli": "20.2.0",
-    "@angular/compiler-cli": "20.2.0",
-    "@angular/language-service": "20.2.0",
-    "@schematics/angular": "20.2.0",
+    "@angular-devkit/build-angular": "20.3.8",
+    "@angular-eslint/eslint-plugin": "20.5.1",
+    "@angular-eslint/eslint-plugin-template": "20.5.1",
+    "@angular-eslint/schematics": "20.5.1",
+    "@angular-eslint/template-parser": "20.5.1",
+    "@angular/build": "20.3.8",
+    "@angular/cli": "20.3.8",
+    "@angular/compiler-cli": "20.3.9",
+    "@angular/language-service": "20.3.9",
+    "@schematics/angular": "20.3.8",
     "@types/crypto-js": "4.2.2",
-    "@types/jasmine": "5.1.9",
+    "@types/jasmine": "5.1.12",
     "@types/jasminewd2": "2.0.13",
-    "@types/node": "24.3.0",
-    "@types/office-js": "1.0.525",
-    "@types/qrcode": "1.5.5",
-    "@types/uuid": "10.0.0",
+    "@types/node": "24.10.0",
+    "@types/office-js": "1.0.555",
+    "@types/qrcode": "1.5.6",
+    "@types/uuid": "11.0.0",
     "@types/webpack": "5.28.5",
-    "@typescript-eslint/eslint-plugin": "8.40.0",
-    "@typescript-eslint/parser": "8.40.0",
+    "@typescript-eslint/eslint-plugin": "8.46.3",
+    "@typescript-eslint/parser": "8.46.3",
     "codelyzer": "6.0.2",
-    "eslint": "9.33.0",
+    "eslint": "9.39.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-prettier": "5.5.4",
-    "jasmine-core": "5.9.0",
+    "jasmine-core": "5.12.1",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
@@ -105,7 +105,7 @@
     "prettier": "3.6.2",
     "prettier-eslint": "16.4.2",
     "ts-node": "10.9.2",
-    "typescript": "5.8.2"
+    "typescript": "5.9.3"
   },
   "overrides": {
     "@ngrx/store": {
